# TwistedRest

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  turbo.json
.github/workflows/: build-app.yml
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/crates/twistedflow-builder/: Cargo.toml
apps/desktop/src-tauri/crates/twistedflow-builder/src/: lib.rs
apps/desktop/src-tauri/crates/twistedflow-cli/: Cargo.toml
apps/desktop/src-tauri/crates/twistedflow-cli/src/: build.rs  main.rs  plugin.rs
apps/desktop/src-tauri/crates/twistedflow-engine/src/: executor.rs  graph.rs  lib.rs  node.rs  subflow.rs  wasm_host.rs
apps/desktop/src-tauri/crates/twistedflow-nodes/src/: assert_node.rs  assert_type_node.rs  break_object.rs  convert.rs  cookie_node.rs  cors_node.rs  emit_event.rs  encode_decode_node.rs  env_var.rs  exit_node.rs  file_read_node.rs  file_write_node.rs  filter_node.rs  for_each.rs  get_variable.rs  hash_node.rs  http_listen.rs  http_request.rs  if_else.rs  lib.rs  log_node.rs  make_object.rs  map_node.rs  match_node.rs  merge_node.rs  parse_args.rs  parse_body_node.rs  print_node.rs  prompt_node.rs  rate_limit_node.rs  redirect_node.rs  reduce_node.rs  regex_node.rs  retry_node.rs  route_match.rs  route_node.rs  send_response.rs  serve_static_node.rs  set_headers_node.rs  set_variable.rs  (+11 more)
apps/desktop/src-tauri/crates/twistedflow-plugin-dev/: Cargo.toml
apps/desktop/src-tauri/crates/twistedflow-plugin-dev/src/: lib.rs
apps/desktop/src-tauri/crates/twistedflow-project/: Cargo.toml
apps/desktop/src-tauri/crates/twistedflow-project/src/: lib.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  custom_nodes.rs  db.rs  executor_commands.rs  http.rs  lib.rs  main.rs  project.rs
apps/desktop/src/mainview/: App.module.css  App.tsx  app.css  css-modules.d.ts  index.html  main.tsx  use-tauri.ts
apps/desktop/src/mainview/components/canvas/: canvas-placeholder.module.css  canvas-placeholder.tsx  flow-canvas.module.css  flow-canvas.tsx  node-palette.module.css  node-palette.tsx
apps/desktop/src/mainview/components/canvas/nodes/: break-object-node.tsx  convert-node.tsx  emit-event-node.tsx  env-var-node.tsx  for-each-node.tsx  function-node.tsx  get-variable-node.tsx  http-request-node.tsx  if-else-node.tsx  log-node.tsx  make-object-node.tsx  match-node.tsx  node.module.css  on-event-node.tsx  set-variable-node.tsx  start-node.tsx  system-node.tsx  tap-node.tsx  try-catch-node.tsx
apps/desktop/src/mainview/components/console/: console-panel.module.css  console-panel.tsx
apps/desktop/src/mainview/components/editor/: code-editor.tsx
apps/desktop/src/mainview/components/inspector/: inspector-panel.module.css  inspector-panel.tsx  json-to-zod-modal.module.css  json-to-zod-modal.tsx
apps/desktop/src/mainview/components/layout/: project-bar.module.css  project-bar.tsx  sidebar.module.css  sidebar.tsx  title-bar.module.css  title-bar.tsx
apps/desktop/src/mainview/components/settings/: project-settings-modal.module.css  project-settings-modal.tsx
apps/desktop/src/mainview/components/workspace/: bottom-workspace.module.css  bottom-workspace.tsx
apps/desktop/src/mainview/lib/: console-context.ts  copy-curl.ts  eval-schema.ts  exec-context.ts  groups.ts  node-pins.ts  node-registry.ts  pin-classes.ts  schema-resolution.ts  update-checker.ts  variables-context.ts
apps/web/: docs.html  index.html
docs/: plugins.md
examples/: README.md  github-user-repos.flow.json  weather-with-error-handling.flow.json
examples/plugins/: README.md
examples/plugins/json-tools/: README.md
scripts/: release.ts
