[package]
name = "twistedrest"
version = "0.2.0"
description = "TwistedRest — visual API workflow builder"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "twistedrest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "gzip",
  "brotli",
  "deflate",
] }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
