[workspace]
members = [".", "crates/twistedflow-engine", "crates/twistedflow-nodes", "crates/twistedflow-macros", "crates/twistedflow-cli", "crates/twistedflow-builder", "crates/twistedflow-project", "crates/twistedflow-plugin-dev"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "time", "rt", "sync", "macros", "fs", "process"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "gzip",
  "brotli",
  "deflate",
] }
regex = "1"
tokio-util = "0.7"
log = "0.4"

[package]
name = "twistedflow"
version = "1.3.1"
description = "TwistedFlow — visual flow engine"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "twistedflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
open = "5"
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
twistedflow-engine = { path = "crates/twistedflow-engine" }
twistedflow-nodes = { path = "crates/twistedflow-nodes" }
twistedflow-builder = { path = "crates/twistedflow-builder" }
twistedflow-project = { path = "crates/twistedflow-project" }
twistedflow-plugin-dev = { path = "crates/twistedflow-plugin-dev" }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
